Fix alert banner issue and icon alignment

--- a/src/scss/_alert.scss
+++ b/src/scss/_alert.scss
@@ -18,12 +18,6 @@ $alert-dismissible-padding-r: $alert-padding-x * 2;
   font-weight: 400;
   text-align: left;
   cursor: default;
-  box-shadow:
-    0 .2px .2px rgba(0, 0, 0, .019),
-    0 .4px .6px rgba(0, 0, 0, .027),
-    0 .9px 1.2px rgba(0, 0, 0, .033),
-    0 1.8px 2.6px rgba(0, 0, 0, .041),
-    0 5px 7px rgba(0, 0, 0, .06);
 
   /* Default to "info" */
   @include alert-variant($color-info, transparent, $color-info-text);
@@ -63,9 +57,9 @@ $alert-dismissible-padding-r: $alert-padding-x * 2;
 
 /* Icon alignment */
 .alert .icon {
-  align-self: baseline;
   min-height: 3.2rem;
   margin-right: .5rem;
+  margin-left: -.2rem;
 }
 
 .alert-success {
@@ -105,7 +99,7 @@ $alert-dismissible-padding-r: $alert-padding-x * 2;
 .alert-banner .container {
   position: relative;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
 
   /* Using border instead of padding to not respect the container padding */
@@ -114,12 +108,17 @@ $alert-dismissible-padding-r: $alert-padding-x * 2;
 
 /* Minor alignment tweak in this case as well */
 .alert-banner .btn-close {
-  top: calc($alert-padding-y * -1);
+  top: calc($alert-padding-y - .9rem);
   right: calc(($alert-dismissible-padding-r + .125rem) * -1);
 }
 
-/* Without shadow */
+/* With shadow */
 
-.alert-flat {
-  box-shadow: none;
+.alert-shadow {
+  box-shadow:
+    0 .2px .2px rgba(0, 0, 0, .018),
+    0 .4px .6px rgba(0, 0, 0, .026),
+    0 .9px 1.2px rgba(0, 0, 0, .032),
+    0 1.8px 2.6px rgba(0, 0, 0, .04),
+    0 5px 7px rgba(0, 0, 0, .05);
 }
